Add maping IEnumarable

--- a/MVC/Views/Developer/Edit.cshtml
+++ b/MVC/Views/Developer/Edit.cshtml
@@ -15,7 +15,7 @@
                 <span asp-validation-for="PositionId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Створити" class="btn btn-primary" />
+                <input type="submit" value="Зберегти" class="btn btn-primary" />
             </div>
             <div>
                 <a class="btn btn-sm btn-primary text-white" onclick="getRequest('@Url.Action("Index", "Developer", null, Context.Request.Scheme)')">Назад</a>
