--- a/MVC/Views/Client/Edit.cshtml
+++ b/MVC/Views/Client/Edit.cshtml
@@ -10,7 +10,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Створити" class="btn btn-primary" />
+                <input type="submit" value="Зберегти" class="btn btn-primary" />
             </div>
         </form>
     </div>
