--- a/MVC/Views/Client/Create.cshtml
+++ b/MVC/Views/Client/Create.cshtml
@@ -1,12 +1,22 @@
 ﻿@model ClientModel
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <form asp-action="Create" onsubmit="return postQuery(this);">
+        <form asp-action="Create" onsubmit="return postQuery(this);" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Surname" class="control-label"></label>
+                <input asp-for="Surname" class="form-control" />
+                <span asp-validation-for="Surname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Age" class="control-label"></label>
+                <input asp-for="Age" class="form-control" />
+                <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Створити" class="btn btn-primary" />
