--- a/MVC/Views/Client/Edit.cshtml
+++ b/MVC/Views/Client/Edit.cshtml
@@ -1,13 +1,23 @@
 ﻿@model ClientModel
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <form method="post" asp-action="Edit" onsubmit=" return postQuery(this);">
+        <form method="post" asp-action="Edit" onsubmit=" return postQuery(this);" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Surname" class="control-label"></label>
+                <input asp-for="Surname" class="form-control" />
+                <span asp-validation-for="Surname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Age" class="control-label"></label>
+                <input asp-for="Age" class="form-control" />
+                <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Зберегти" class="btn btn-primary" />
