--- a/MVC/Views/Developer/Index.cshtml
+++ b/MVC/Views/Developer/Index.cshtml
@@ -9,12 +9,12 @@
     <div class="d-flex flex-column bg-light m-2 justify-content-around">
         <div class="d-flex justify-content-between">
             <div class="d-flex">
-                <p class="p-1">@Html.DisplayNameFor(model => model.Id)</p>
-                <p class="p-1">@Html.DisplayFor(model => item.Id)</p>
-            </div>
-            <div class="d-flex">
                 <p class="p-1">@Html.DisplayNameFor(model => model.Name)</p>
                 <p class="p-1">@Html.DisplayFor(model => item.Name)</p>
+            </div>
+            <div class="d-flex">
+                <p class="p-1">@Html.DisplayNameFor(model => model.Surname)</p>
+                <p class="p-1">@Html.DisplayFor(model => item.Surname)</p>
             </div>
             <div class="d-flex">
                 <p class="p-1">@Html.DisplayNameFor(model => model.Position)</p>
