--- a/MVC/Views/Position/Create.cshtml
+++ b/MVC/Views/Position/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PositionModel
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <form asp-action="Create" onsubmit="return postQuery(this);">
+        <form asp-action="Create" onsubmit="return postQuery(this);" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
