--- a/MVC/Views/Position/Edit.cshtml
+++ b/MVC/Views/Position/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PositionModel
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <form method="post" asp-action="Edit" onsubmit=" return postQuery(this);">
+        <form method="post" asp-action="Edit" onsubmit=" return postQuery(this);" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
