--- a/MVC/Views/Project/Create.cshtml
+++ b/MVC/Views/Project/Create.cshtml
@@ -1,12 +1,17 @@
 ﻿@model ProjectModel
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <form asp-controller="Project" asp-action="Create" onsubmit="return postQuery(this);">
+        <form asp-controller="Project" asp-action="Create" onsubmit="return postQuery(this);" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ClientId" class="control-label"></label>
