--- a/MVC/Views/Project/Detalis.cshtml
+++ b/MVC/Views/Project/Detalis.cshtml
@@ -2,17 +2,18 @@
 
 <div class="d-flex flex-column bg-light m-2 justify-content-around">
     <div class="d-flex justify-content-between align-items-center">
-        <div class="d-flex">
-            <p class="p-1">@Html.DisplayNameFor(model => model.Id)</p>
-            <p class="p-1">@Html.DisplayFor(model => Model.Id)</p>
-        </div>
+
         <div class="d-flex">
             <p class="p-1">@Html.DisplayNameFor(model => model.Name)</p>
             <p class="p-1">@Html.DisplayFor(model => Model.Name)</p>
         </div>
         <div class="d-flex">
             <p class="p-1">@Html.DisplayNameFor(model => model.Client)</p>
-            <p class="p-1">@Html.DisplayFor(model => Model.Client.Name)</p>
+            <p class="p-1">@Html.DisplayFor(model => Model.Client.Name) @Html.DisplayFor(model => Model.Client.Surname)</p>
+        </div>
+        <div class="d-flex">
+            <p class="p-1">@Html.DisplayNameFor(model => model.Price)</p>
+            <p class="p-1">@Html.DisplayFor(model => Model.Price)</p>
         </div>
     </div>
     <p class="text-uppercase">@Html.DisplayNameFor(model => model.Developers)</p>
