--- a/MVC/Views/Project/Edit.cshtml
+++ b/MVC/Views/Project/Edit.cshtml
@@ -1,13 +1,18 @@
 ﻿@model ProjectModel
 <div class="row justify-content-center">
     <div class="col-md-8">
-        <form method="post" asp-controller="Project" asp-action="Edit" onsubmit="return postQuery(this);">
+        <form method="post" asp-controller="Project" asp-action="Edit" onsubmit="return postQuery(this);" autocomplete="off">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ClientId" class="control-label"></label>
